--- a/src/UI/Headquarters/WB.UI.Headquarters/Dependencies/css/_import-questionnaires.scss
+++ b/src/UI/Headquarters/WB.UI.Headquarters/Dependencies/css/_import-questionnaires.scss
@@ -41,7 +41,6 @@ main{
         font: 14px/16px "TrebuchetMS";
         list-style: none;
         padding: 0;
-        color: $gray_info;
         overflow: hidden;
         li{
             margin-bottom: 6px;
